pbutils: fix gst_install_plugins_{sync,async} g-i annotations

the gir scanner doesn't use a sensible defaults for string array
arguments, so we have to annotate it properly.

https://bugzilla.gnome.org/show_bug.cgi?id=668343