gst-libs/gst/pbutils/install-plugins.c
@@ -597,8 +597,9 @@ gst_install_plugins_installer_exited (GPid pid, gint status, gpointer data)
 
 /**
  * gst_install_plugins_async:
- * @details: NULL-terminated array of installer string details (see below)
- * @ctx: a #GstInstallPluginsContext, or NULL
+ * @details: (array zero-terminated=1) (transfer none): NULL-terminated array
+ *     of installer string details (see below)
+ * @ctx: (allow-none): a #GstInstallPluginsContext, or NULL
  * @func: (scope async): the function to call when the installer program returns
  * @user_data: (closure): the user data to pass to @func when called, or NULL
  * 
@@ -656,8 +657,9 @@ gst_install_plugins_async (gchar ** details, GstInstallPluginsContext * ctx,
 
 /**
  * gst_install_plugins_sync:
- * @details: NULL-terminated array of installer string details
- * @ctx: a #GstInstallPluginsContext, or NULL
+ * @details: (array zero-terminated=1) (transfer none): NULL-terminated array
+ *     of installer string details
+ * @ctx: (allow-none): a #GstInstallPluginsContext, or NULL
  * 
  * Requests plugin installation and block until the plugins have been
  * installed or installation has failed.
